fix percentage view on mobile layout

--- a/public/main.css
+++ b/public/main.css
@@ -389,7 +389,6 @@ tbody {
   letter-spacing: -0.78px;
   font-family: 'Segoe UI', 'SF Pro Text', sans-serif;
   top: 53px;
-  left: 246.75px;
   width: 98.5px;
   -moz-user-select: none;
   -ms-user-select: none;
